overlays/dev/mystok-gcp-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mystok-gcp-app
  name: mystok-gcp-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mystok-gcp-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mystok-gcp-app
    spec:
      containers:
      - image: dekabitasp/mystok-gcp-app:latest
        imagePullPolicy: ""
        name: mystok-gcp-app
        ports:
        - containerPort: 80
        resources: 
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 200m
        readinessProbe:
          httpGet:
            path: /mystok/top.jsp
            port: 80
          failureThreshold: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            port: 80
            path: /mystok/top.jsp
          failureThreshold: 5
          periodSeconds: 30
        volumeMounts:
        - name: mystok-gcp-gke-to-cloudstorage-sa-secret-volume
          mountPath: /var/secrets/google
      - image: gcr.io/cloudsql-docker/gce-proxy:1.17
        name: cloud-sql-proxy
        command:
          - "/cloud_sql_proxy"
          - "-instances=$INSTANCE_CONNECTION_NAME=tcp:3306"
          - "-credential_file=/secrets/service-account-cloudsqlproxy.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: mystok-gcp-cloudsqlproxy-sa-secret-volume
          mountPath: /secrets/
          readOnly: true
        resources:
          limits:
            cpu: 100m
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mystok-gcp-cloudsqlproxy-sa-secret-volume
        secret:
          secretName: mystok-gcp-cloudsqlproxy-sa-secret
      - name: mystok-gcp-gke-to-cloudstorage-sa-secret-volume
        secret:
          secretName: mystok-gcp-gke-to-cloudstorage-sa-secret
