overlays/dev/mystok-gcp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mystok-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mystok-gcp-ip----------test
    networking.gke.io/managed-certificates: mystok-gcp-ssl-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: mystok-gcp-app
          servicePort: 80
